# experiments-sdd

./: .dockerignore  .gitignore  AGENTS.md  README.md  index.html
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: __init__.py  users.py
backend/app/core/: audit.py  config.py  observability.py  pagination.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: common.py  users.py
backend/app/services/: errors.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_user_table.py
backend/tests/: conftest.py
backend/tests/integration/: test_users_create.py  test_users_delete.py  test_users_list.py
backend/tests/unit/repositories/: test_user_repository.py
backend/tests/unit/services/: test_user_service.py
docker/: .env.example  Dockerfile  docker-compose.yml
docs/experiments/: 00-init.md
specs/001-user-management-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-management-api/checklists/: requirements.md
specs/001-user-management-api/contracts/: openapi.yaml
